Fix debt value overflowing

--- a/client/src/styles/user.css
+++ b/client/src/styles/user.css
@@ -2,6 +2,10 @@
   overflow: overlay;
 }
 
+.user-balance-container {
+  justify-self: start;
+}
+
 .users-container::-webkit-scrollbar {
   width: 6px;
   overflow: overlay;
@@ -17,7 +21,7 @@
   font-family: "Poppins";
   display: grid;
   align-items: center;
-  grid-template-columns: [image] 50px [member] auto [balance] 50px;
+  grid-template-columns: [image] 50px [member] auto [balance] 90px;
   width: 90%;
   height: 50px;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
